Changelog
=========

0.1.4 (2014-05-19)
------------------

- Restore compatibility with Python 2.7.3. [Leo Singer]

  Python 2.7.3's io.BytesIO() cannot accept a bytes object, but not a
  buffer object.

0.1.3 (2014-05-19)
------------------

- Support Python 3.x. [Leo Singer]

- Conditionally import xml.parsers.expat.ExpatError. [Leo Singer]

  Restores compatibility with Python 2.6, which does not have
  xml.etree.cElementTree.ParseError.

- Add unit test for connection closed by server. [Leo Singer]

- Recover from connection closed by peer while reading. [Leo Singer]

- Add nose-based unit tests. Build now uses setuptools. [Leo Singer]

- Fix typos. [Leo Singer]

0.1.2 (2014-02-27)
------------------

- Print error and recover if VOEvent message has no ivorn. [Leo Singer]

- Recover from malformed XML packets. [Leo Singer]

  If a malformed XML packet is received, log its base64-encoded content
  for debugging purposes and then reconnect.

- Add rudimentary server. [Leo Singer]

- Fix spelling error. [Leo Singer]

0.1.1 (2014-02-12)
------------------

- Fix Python 2.6 compatibility. [Leo Singer]

- Prefer lxml.etree over xml.etree. [Leo Singer]

  It's faster.

0.1 (2014-02-07)
----------------

- First release. [Leo Singer]