@@ -139,3 +139,8 @@ SWIFT_BAT_KNOWN_SRC = 141
 VOE_11_IM_ALIVE = 142
 VOE_20_IM_ALIVE = 143
 SUZAKU_LC = 148
+LVC_PRELIMINARY = 150
+LVC_INITIAL = 151
+LVC_UPDATE = 152
+LVC_TEST = 153
+LVC_COUNTERPART = 154
