@@ -1,6 +1,10 @@
 Changelog
 =========
 
+X.X.X (UNRELEASED)
+
+- Add LIGO/Virgo notice types. [Leo Singer]
+
 0.1.4 (2014-05-19)
 ------------------
 
